# sway-colord

./: Cargo.toml  README.md  RESEARCH.md  build.rs
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yml  release.yml
.project/hooks/: pre-commit  pre-push
.rpm/: sway-colord.spec
build-os/arch/sway-colord/: PKGBUILD  sway-colord-0.1.0-1-x86_64.pkg.tar.zst
build-os/debian/: control  postinst
src/: main.rs
src/config/: alacritty.rs  arbitrary.rs  bat.rs  env.rs  gsettings.rs  lighting.rs  mako.rs  mod.rs  spotify.rs  tests.rs  utils.rs  vscode.rs
wayland-settings-core/: Cargo.toml
wayland-settings-core/src/config/: alacritty.rs  gsettings.rs  mod.rs  tests.rs  vscode.rs
wayland-settings-daemon/: Cargo.toml
wayland-settings-daemon/src/: main.rs
