[package]
authors = ["David Karrick <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"
name = "sway-colord"
version = "0.1.0"

[dependencies]
anyhow = "1.0.37"
chrono = "0.4.19"
ron = "0.6.4"
swayipc = "3.0.0-alpha.2"
dirs-next = "2.0.0"
zbus = "1.8.0"
zvariant = "2.4.0"
serde_json = "1.0.61"
json5 = "0.3"
async-recursion = "0.3.1"
sunrise = "1.0.0"
procfs = "0.9.1"
libc = "0.2.82"
[dependencies.async-std]
features = ["attributes"]
version = "1"

[dependencies.serde]
features = ["serde_derive"]
version = "1.0.60"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]