[package]
authors = ["David Karrick <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"
name = "sway-colord"
version = "0.1.0"
license = "apache"
description = "a daemon for sway to automatically change light and dark themes based on the time of day."
readme = "README.md"
homepage = "https://github.com/Th3Whit3Wolf/sway-colord"

[features]
default = ["cargo-husky"]

[dependencies]
anyhow = "1.0.37"
chrono = "0.4.19"
ron = "0.6.4"
swayipc = "3.0.0-alpha.2"
dirs-next = "2.0.0"
zbus = "1.8.0"
zvariant = "2.4.0"
serde_json = "1.0.61"
json5 = "0.3"
async-recursion = "0.3.1"
sunrise = "1.0.0"
procfs = "0.9.1"
libc = "0.2.82"


[dependencies.async-std]
features = ["attributes"]
version = "1"

[dependencies.serde]
features = ["serde_derive"]
version = "1.0.60"


[dev-dependencies.cargo-husky]
git = "https://github.com/DoBi/cargo-husky"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
optional = true

[package.metadata.rpm]
package = "sway-colord"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
sway-colord = { path = "/usr/bin/sway-colord" }
