[package]
authors = ["David Karrick <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"
name = "wayland-settings-daemon"
version = "0.1.0"

[dependencies]
wayland-settings-core = {path = "../wayland-settings-core"}
anyhow = "1.0.37"
async-recursion = "0.3.1"
chrono = "0.4.19"
sunrise = "1.0.0"


[dependencies.async-std]
features = ["attributes"]
version = "1"